workshop03/istio/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: demopythonappdr1
  namespace: default

spec:
  hosts: demopythonappsvc
  subsets:
  - labels:
      version: v1
    name: version-1
  - labels:
      version: v2
    name: version-2
