workshop03/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demopythonappvs1
 
spec:
  hosts:
  - "xawn.68.183.247.89.nip.io"
  gateways:
  - demopythonappgw #pythondemoapp-ingress
  http:
  - match:
    - uri:
        exact: /v1/hello
    route:
    - destination:
        host: demopythonappsvc
        subset: version-1
    rewrite:
      uri: /hello
  - match:
    - uri:
        exact: /v2/hello
    route:
    - destination:
        host: demopythonappsvc
        subset: version-2
    rewrite:
      uri: /hello
